--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.3.0",
     "gulp-util": "^2.2.16",
+    "jsdom": "^0.10.6",
+    "lodash": "^2.4.1",
+    "q": "^1.0.1",
     "react": "^0.10.0",
+    "react-tools": "^0.10.0",
     "through2": "^0.5.1"
   }
 }
