Add CSS + markdown

--- a/package.json
+++ b/package.json
@@ -23,23 +23,24 @@
   },
   "homepage": "https://github.com/PaulLeCam/voila",
   "devDependencies": {
-    "browserify": "^4.1.10",
+    "browserify": "^4.2.0",
     "coffee-script": "^1.7.1",
     "coffeeify": "^0.6.0",
     "connect-livereload": "^0.4.0",
     "cson-safe": "^0.1.1",
     "envify": "^1.2.1",
-    "express": "^4.4.4",
-    "gulp": "^3.8.1",
-    "gulp-clean": "^0.3.0",
+    "express": "^4.4.5",
+    "gulp": "^3.8.5",
     "gulp-debug": "^0.3.0",
     "gulp-file": "^0.1.0",
     "gulp-livereload": "^2.1.0",
-    "gulp-load-plugins": "^0.5.1",
+    "gulp-load-plugins": "^0.5.3",
+    "gulp-markdown": "^0.1.2",
     "gulp-rename": "^1.2.0",
+    "gulp-rimraf": "^0.1.0",
     "gulp-template": "^0.1.1",
-    "gulp-util": "^2.2.17",
-    "jsdom": "^0.11.0",
+    "gulp-util": "^2.2.19",
+    "jsdom": "^0.11.1",
     "lodash": "^2.4.1",
     "q": "^1.0.1",
     "react": "^0.10.0",
