--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "envify": "^1.2.1",
     "express": "^4.4.5",
     "gulp": "^3.8.5",
-    "gulp-debug": "^0.3.0",
-    "gulp-file": "^0.1.0",
     "gulp-livereload": "^2.1.0",
     "gulp-load-plugins": "^0.5.3",
     "gulp-markdown": "^0.1.2",
@@ -42,7 +40,6 @@
     "gulp-util": "^2.2.19",
     "jsdom": "^0.11.1",
     "lodash": "^2.4.1",
-    "q": "^1.0.1",
     "react": "^0.10.0",
     "react-tools": "^0.10.0",
     "through2": "^0.5.1",
@@ -51,6 +48,9 @@
   },
   "dependencies": {
     "ampersand-router": "^1.0.1",
+    "ampersand-state": "^4.3.1",
+    "andlog": "^1.0.0",
+    "backbone-events-standalone": "^0.2.2",
     "curl-amd": "^0.8.10"
   }
 }
