--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "gulp-util": "^2.2.19",
     "jsdom": "^0.11.1",
     "lodash": "^2.4.1",
-    "react": "^0.10.0",
     "react-tools": "^0.10.0",
     "through2": "^0.5.1",
     "tiny-lr": "0.0.7",
@@ -48,9 +47,7 @@
   },
   "dependencies": {
     "ampersand-router": "^1.0.1",
-    "ampersand-state": "^4.3.1",
-    "andlog": "^1.0.0",
-    "backbone-events-standalone": "^0.2.2",
-    "curl-amd": "^0.8.10"
+    "highland": "^1.25.4",
+    "react": "^0.10.0"
   }
 }
