--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "ampersand-router": "^1.0.1",
     "highland": "^1.25.4",
+    "lodash-node": "^2.4.1",
     "react": "^0.10.0"
   }
 }
