--- a/package.json
+++ b/package.json
@@ -23,31 +23,35 @@
   },
   "homepage": "https://github.com/PaulLeCam/voila",
   "devDependencies": {
-    "browserify": "^4.2.1",
+    "browserify": "^4.2.3",
     "coffee-script": "^1.7.1",
-    "coffeeify": "^0.6.0",
+    "coffeeify": "^0.7.0",
     "connect-livereload": "^0.4.0",
     "cson-safe": "^0.1.1",
     "express": "^4.6.1",
     "gulp": "^3.8.6",
+    "gulp-debug": "^0.3.0",
+    "gulp-less": "^1.3.2",
     "gulp-livereload": "^2.1.0",
     "gulp-load-plugins": "^0.5.3",
     "gulp-markdown": "^0.1.2",
     "gulp-rename": "^1.2.0",
     "gulp-rimraf": "^0.1.0",
     "gulp-template": "^0.1.1",
-    "gulp-util": "^2.2.20",
+    "gulp-util": "^3.0.0",
     "jsdom": "^0.11.1",
-    "react-tools": "^0.10.0",
+    "react-tools": "^0.11.0",
     "tiny-lr": "0.0.9",
     "vinyl-source-stream2": "^0.1.1"
   },
   "dependencies": {
     "ampersand-router": "^1.0.1",
     "bean": "^1.0.14",
+    "bootstrap": "^3.2.0",
     "debug": "^1.0.4",
     "highland": "^1.26.3",
     "lodash-node": "^2.4.1",
-    "react": "^0.10.0"
+    "react": "^0.10.0",
+    "react-bootstrap": "^0.11.0"
   }
 }
