--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "connect-livereload": "^0.4.0",
     "cson-safe": "^0.1.1",
     "express": "^4.6.1",
+    "front-matter": "^0.2.0",
     "gulp": "^3.8.6",
     "gulp-debug": "^0.3.0",
     "gulp-less": "^1.3.2",
@@ -39,6 +40,7 @@
     "gulp-rimraf": "^0.1.0",
     "gulp-template": "^0.1.1",
     "gulp-util": "^3.0.0",
+    "highlight.js": "^8.1.0",
     "jsdom": "^0.11.1",
     "react-tools": "^0.11.0",
     "tiny-lr": "0.0.9",
